Put plotting in package

--- a/notebooks/01-Introduction.ipynb
+++ b/notebooks/01-Introduction.ipynb
@@ -63,17 +63,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "281b4d3b",
    "metadata": {
     "id": "281b4d3b"
    },
    "outputs": [],
    "source": [
-    "mesh_shape = [256, 256, 256]\n",
-    "box_size = [256., 256., 256.]\n",
+    "mesh_shape = [128, 128, 128]\n",
+    "box_size = [128., 128., 128.]\n",
     "snapshots = jnp.array([0.1, 0.5, 1.0])\n",
     "\n",
+    "@jax.jit\n",
     "def run_simulation(omega_c, sigma8):\n",
     "    # Create a small function to generate the matter power spectrum\n",
     "    k = jnp.logspace(-4, 1, 128)\n",
@@ -126,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "4e012ce8",
    "metadata": {
     "colab": {
@@ -149,7 +150,7 @@
     }
    ],
    "source": [
-    "from visualize import plot_fields_single_projection\n",
+    "from jaxpm.plotting import plot_fields_single_projection\n",
     "\n",
     "fields = {\"Initial Conditions\" : initial_conditions , \"LPT Field\" : cic_paint(jnp.zeros(mesh_shape) ,lpt_particles)}\n",
     "for i , field in enumerate(ode_particles[1:]):\n",
@@ -169,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "b71824ed",
    "metadata": {},
    "outputs": [
@@ -182,8 +183,8 @@
     }
    ],
    "source": [
-    "mesh_shape = [256, 256, 256]\n",
-    "box_size = [256., 256., 256.]\n",
+    "mesh_shape = [128, 128, 128]\n",
+    "box_size = [128., 128., 128.]\n",
     "snapshots = jnp.array([0.1, 0.5, 1.0])\n",
     "\n",
     "@jax.jit\n",
@@ -216,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "33b5e684",
    "metadata": {},
    "outputs": [
@@ -232,7 +233,8 @@
     }
    ],
    "source": [
-    "from visualize import plot_fields_single_projection\n",
+    "from jaxpm.plotting import plot_fields_single_projection\n",
+    "\n",
     "fields = {\"Initial Conditions\" : initial_conditions , \"LPT Field\" : cic_paint_dx(lpt_displacements)}\n",
     "for i , field in enumerate(ode_displacements[1:]):\n",
     "    fields[f\"field_{i}\"] = cic_paint_dx(field)\n",
