--- a/notebooks/04-MultiGPU_PM_Solvers.ipynb
+++ b/notebooks/04-MultiGPU_PM_Solvers.ipynb
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
     }
    ],
    "source": [
-    "from visualize import plot_fields_single_projection\n",
+    "from jaxpm.plotting import plot_fields_single_projection\n",
     "\n",
     "mesh_shape = 1024\n",
     "box_size = 1000.\n",
