--- a/notebooks/05-MultiHost_PM.ipynb
+++ b/notebooks/05-MultiHost_PM.ipynb
@@ -259,7 +259,7 @@
     }
    ],
    "source": [
-    "from visualize import plot_fields_single_projection\n",
+    "from jaxpm.plotting import plot_fields_single_projection\n",
     "fields = {\n",
     "    \"Initial Conditions\": initial_conditions,\n",
     "    \"LPT Field\": lpt_displacements,\n",
