--- a/notebooks/04-MultiGPU_PM_Solvers.ipynb
+++ b/notebooks/04-MultiGPU_PM_Solvers.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,13 +20,10 @@
     "import jax\n",
     "import jax.numpy as jnp\n",
     "import jax_cosmo as jc\n",
-    "from jax.debug import visualize_array_sharding\n",
     "\n",
-    "from jax.experimental.ode import odeint\n",
     "from jaxpm.kernels import interpolate_power_spectrum\n",
-    "from jaxpm.painting import cic_paint , cic_paint_dx\n",
-    "from jaxpm.pm import linear_field, lpt, make_ode_fn\n",
-    "from jaxpm.distributed import uniform_particles\n",
+    "from jaxpm.painting import cic_paint_dx\n",
+    "from jaxpm.pm import linear_field, lpt, make_diffrax_ode\n",
     "from functools import partial\n",
     "from diffrax import ConstantStepSize, LeapfrogMidpoint,Dopri5 , PIDController , ODETerm, SaveAt, diffeqsolve"
    ]
@@ -82,7 +79,6 @@
     "from jax.experimental.multihost_utils import process_allgather\n",
     "from jax.sharding import Mesh, NamedSharding\n",
     "from jax.sharding import PartitionSpec as P\n",
-    "from functools import partial\n",
     "\n",
     "all_gather = partial(process_allgather, tiled=False)\n",
     "\n",
@@ -94,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,12 +123,12 @@
     "                   sharding=sharding)\n",
     "\n",
     "    # Evolve the simulation forward\n",
-    "    ode_fn = make_ode_fn(mesh_shape, halo_size=halo_size, sharding=sharding)\n",
-    "    term = ODETerm(lambda t, state, args: jnp.stack(ode_fn(state, t, args), axis=0))\n",
+    "    ode_fn = ODETerm(\n",
+    "        make_diffrax_ode(cosmo, mesh_shape, paint_absolute_pos=False))\n",
     "    solver = LeapfrogMidpoint()\n",
     "\n",
     "    stepsize_controller = ConstantStepSize()\n",
-    "    res = diffeqsolve(term,\n",
+    "    res = diffeqsolve(ode_fn,\n",
     "                      solver,\n",
     "                      t0=0.1,\n",
     "                      t1=1.,\n",
@@ -244,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -291,12 +287,12 @@
     "                   sharding=sharding)\n",
     "\n",
     "    # Evolve the simulation forward\n",
-    "    ode_fn = make_ode_fn(mesh_shape, halo_size=halo_size, sharding=sharding)\n",
-    "    term = ODETerm(lambda t, state, args: jnp.stack(ode_fn(state, t, args), axis=0))\n",
+    "    ode_fn = ODETerm(\n",
+    "        make_diffrax_ode(cosmo, mesh_shape, paint_absolute_pos=False))\n",
     "    solver = Dopri5()\n",
     "\n",
     "    stepsize_controller = PIDController(rtol=1e-5,atol=1e-5)\n",
-    "    res = diffeqsolve(term,\n",
+    "    res = diffeqsolve(ode_fn,\n",
     "                      solver,\n",
     "                      t0=0.1,\n",
     "                      t1=1.,\n",
